# xi.back-2

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  init-schema.sql  pyproject.toml
.github/workflows/: common-work.yml  development.yml  production.yml  rollback.yml
alembic/: env.py
alembic/versions/: 001_communities_base.py  002_participants_base.py  003_community_invitations.py  004_categories_and_channels.py  005_invitation_creator_and_sortation.py  006_board_channel_type.py  007_better_channel_kinds.py  008_filestorage.py  009_shorter_invitation_token.py  010_posts.py  011_post_service.py  012_board_channels.py  013_tasks.py  014_access_groups.py  014_hokus.py  015_move_hokus_to_storage.py  015_ydocs.py  016_move_ydocs_to_storage.py  017_basic_messenger.py  018_call_channels.py  018_pinned_messages.py  019_pinned_messages.py  020_uncategorized_files.py  020_unread_messages.py  021_uncategorized_files.py  022_private_files.py  023_message_drafts.py  024_sheduler_events.py  025_tutor_materials.py  026_tutor_subjects.py  027_tutor_invitations.py  028_xi_auth_merge.py  029_default_layout_setting.py  030_invoices_1.py  031_new_onboarding.py  032_personal_access_group.py  033_tutor_materials_content.py  033_user_contacts.py  034_user_contacts.py  035_telegram_connections.py  (+27 more)
app/: main.py  tmex-api-schema.yml
app/autocomplete/: __init__.py  main.py
app/autocomplete/dependencies/: subjects_dep.py
app/autocomplete/models/: subjects_db.py
app/autocomplete/routes/: subjects_int.py  subjects_mub.py  subjects_rst.py
app/classrooms/: __init__.py  main.py
app/classrooms/dependencies/: classroom_notes_dep.py  classrooms_dep.py  classrooms_student_dep.py  classrooms_tutor_dep.py  invitations_dep.py  materials_dep.py  tutorships_dep.py
app/classrooms/models/: classroom_notes_db.py  classrooms_db.py  enrollments_db.py  invitations_db.py  materials_db.py  tutorships_db.py
app/classrooms/routes/: classroom_notes_tutor_rst.py  classrooms_int.py  classrooms_student_rst.py  classrooms_tutor_rst.py  enrollments_tutor_rst.py  invitations_student_rst.py  invitations_tutor_rst.py  materials_tutor_rst.py  tutorships_mub.py  tutorships_student_rst.py  tutorships_tutor_rst.py
app/classrooms/services/: classrooms_svc.py  materials_svc.py
app/common/: access.py  aiogram_ext.py  config.py  config_bdg.py  cyptography.py  fastapi_ext.py  fastapi_tmexio_ext.py  faststream_ext.py  faststream_sentry_ext.py  itsdangerous_ext.py  livekit_ext.py  pydantic_ext.py  responses.py  sentry_ext.py  sqlalchemy_ext.py  tmexio_ext.py
app/common/abscract_models/: ordered_lists_db.py
app/common/bridges/: autocomplete_bdg.py  base_bdg.py  classrooms_bdg.py  communities_bdg.py  datalake_bdg.py  messenger_bdg.py  notifications_bdg.py  pochta_bdg.py  posts_bdg.py  public_users_bdg.py  storage_bdg.py  storage_v2_bdg.py  users_internal_bdg.py  users_public_bdg.py  utils.py
app/common/dependencies/: api_key_dep.py  authorization_dep.py  authorization_sio_dep.py  mub_dep.py  telegram_auth_dep.py
app/common/schemas/: autocomplete_sch.py  datalake_sch.py  messenger_sch.py  notifications_sch.py  pochta_sch.py  storage_sch.py  user_contacts_sch.py  users_sch.py
app/common/utils/: datetime.py
app/communities/: __init__.py  main.py  responses.py  rooms.py  store.py
app/communities/dependencies/: board_channels_dep.py  board_channels_sio_dep.py  call_channels_dep.py  call_channels_sio_dep.py  categories_dep.py  categories_sio_dep.py  channels_dep.py  channels_sio_dep.py  chat_channels_dep.py  chat_channels_sio_dep.py  communities_dep.py  communities_sio_dep.py  invitations_dep.py  invitations_sio_dep.py  participants_dep.py  posts_dep.py  roles_dep.py  task_channels_dep.py  tasks_dep.py
app/communities/models/: board_channels_db.py  call_channels_db.py  categories_db.py  channels_db.py  chat_channels_db.py  (+8 more)
app/conferences/: __init__.py  main.py
app/datalake/: __init__.py  main.py
app/files/: __init__.py  main.py
app/invoices/: __init__.py  main.py
app/materials/: __init__.py  main.py
app/messenger/: __init__.py  main.py  rooms.py
app/notifications/: __init__.py  config.py  main.py  texts.py
app/payments/: __init__.py  main.py
app/pochta/: __init__.py  main.py
app/posts/: __init__.py  main.py
app/scheduler/: __init__.py  main.py
app/storage/: __init__.py  main.py
app/storage_v2/: __init__.py  main.py
app/subscriptions/: __init__.py  main.py
app/supbot/: __init__.py  main.py  setup.py
app/tutors/: __init__.py  main.py
app/users/: __init__.py  config.py  main.py
tests/: conftest.py  factories.py  test_authorizations.py  test_main.py  test_tmexio.py
tests/autocomplete/: conftest.py  factories.py
tests/classrooms/: conftest.py  factories.py
tests/common/: aiogram_factories.py  aiogram_testing.py  assert_contains_ext.py  faker_ext.py  faststream_ext.py  id_provider.py  livekit_testing.py  mock_stack.py  polyfactory_ext.py  respx_ext.py  tmexio_testing.py  types.py  utils.py
tests/communities/: conftest.py  factories.py  test_authorizations.py
tests/conferences/: conftest.py  factories.py
tests/datalake/: factories.py
tests/files/: conftest.py  utils.py
tests/invoices/: conftest.py  factories.py
tests/materials/: conftest.py  factories.py
tests/messenger/: conftest.py  factories.py
tests/notifications/: conftest.py  constants.py  factories.py
tests/pochta/: conftest.py  factories.py  test_pochta_mub.py
tests/posts/: conftest.py  factories.py  test_authorizations.py
tests/scheduler/: conftest.py  factories.py
tests/storage/: conftest.py  factories.py
tests/storage_v2/: conftest.py  factories.py
tests/subscriptions/: conftest.py  factories.py
tests/supbot/: conftest.py  factories.py
tests/tutors/: conftest.py  factories.py
tests/users/: conftest.py  factories.py  test_authorizations.py  test_avatars.py  test_email_confirmation.py  test_forms.py  test_onboarding.py  test_password_reset.py  test_profile.py  test_reglog.py  test_sessions.py  test_sessions_mub.py  test_simple.py  test_users_mub.py  utils.py
(+395 files in other folders)
