[tool.poetry]
name = "xi.back-2"
version = "0.1.0"
description = "Main backend service for xi.effect"
authors = ["niqzart <niqzart@gmail.com>", "xi.team <xieffect@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
psycopg = {extras = ["binary"], version = "^3.1.19"}
pydantic-marshals = {version = "0.3.14", extras = ["sqlalchemy"]}
alembic = "^1.13.1"
pydantic-settings = "^2.2.1"
filetype = "^1.2.0"
python-multipart = "^0.0.9"
httpx = "^0.27.0"
tmexio = "0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
flake8 = "7.0.0"
black = "24.10.0"
pre-commit = "^3.2.1"
mypy = "^1.12.0"
flake8-pie = "0.16.0"
dlint = "0.14.0"
flake8-coding = "1.3.2"
flake8-secure-coding-standard = "1.4.1"
flake8-unused-arguments = "0.0.13"
flake8-pytest-style = "1.7.2"
flake8-useless-assert = "0.4.4"
flake8-simplify = "0.19.3"
flake8-future-import = "0.4.7"
flake8-functions-names = "0.4.0"
flake8-variables-names = "0.0.5"
flake8-comments = "0.1.2"
flake8-annotations = "2.9.1"
flake8-new-union-types = "0.4.1"
flake8-pep585 = "0.1.7"
flake8-type-checking = "2.3.1"
flake8-print = "5.0.0"
flake8-use-fstring = "1.4"
flake8-use-pathlib = "0.3.0"
flake8-test-name = "^0.1.5"
wemake-python-styleguide = "0.18.0"
httpx = "^0.27.0"
pydantic-marshals = {version = "0.3.14", extras = ["assert-contains"]}
rstr = "^3.2.2"
faker = "^24.9.0"
polyfactory = "^2.15.0"
pytest-cov = "^5.0.0"
faker-file = "^0.17.11"
pillow = "^10.3.0"
respx = "^0.21.1"
freezegun = "^1.5.1"

[tool.isort]
profile = "black"
py_version = 312
combine_as_imports = true
known_first_party = ["app", "tests"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
line_length = 88

[tool.mypy]
strict = true
warn_unreachable = true
warn_redundant_casts = true
exclude = ["alembic"]
plugins = [
  "pydantic.mypy",
  "pydantic_marshals.mypy.plugin",
]

[tool.coverage.run]
concurrency = ["greenlet", "thread"]
sigterm = true

[tool.coverage.report]
show_missing = true
skip_covered = true

fail_under = 100

exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if( not)? PRODUCTION_MODE",
  "except ImportError",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == [\"']__main__[\"']:",
  "class .*\\(Protocol\\):",
  "@abstractmethod",
  "custom_swagger_ui_html",
  "custom_openapi",
  "@mark.skip",
  "!wow!",
]

omit = [
  "alembic/*",
  "tests/*",
  "app/common/fastapi_ext.py",
  "app/common/sqlalchemy_ext.py",
  "app/common/starlette_cors_ext.py",
  "app/common/tmexio_ext.py",
  "app/setup_ci.py",
  "app/common/abscract_models/ordered_lists_db.py",  # TODO (33602197)
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
